--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
   "author": "Wuha",
   "license": "MIT",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.3",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-http": "^3.0.5",
+    "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.5.1",
-    "@types/sinon": "^4.3.1",
+    "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.0.0",
+    "express": "^4.16.3",
     "mocha": "^5.1.1",
-    "sinon": "^4.5.0",
-    "ts-node": "^6.0.1",
+    "sinon": "^6.1.4",
+    "ts-node": "^7.0.0",
     "tslint": "^5.9.1",
     "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "compose-middleware": "^5.0.0"
+  }
 }
