--- a/package.json
+++ b/package.json
@@ -7,11 +7,24 @@
   "scripts": {
     "build": "tsc -p tsconfig.release.json",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "mocha"
+    "test": "nyc mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:wuha-team/slack-secret-middleware.git"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "coverage/",
+      "dist/",
+      "**/*.d.ts"
+    ],
+    "all": true
   },
   "author": "Wuha",
   "license": "MIT",
@@ -27,6 +40,7 @@
     "chai-http": "^4.0.0",
     "express": "^4.16.3",
     "mocha": "^5.1.1",
+    "nyc": "^12.0.2",
     "sinon": "^6.1.4",
     "ts-node": "^7.0.0",
     "tslint": "^5.9.1",
