--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "coveralls": "^3.0.2",
     "express": "^4.16.3",
     "mocha": "^5.1.1",
     "nyc": "^12.0.2",
